--- a/source/_posts/消失于互联网.md
+++ b/source/_posts/消失于互联网.md
@@ -12,7 +12,7 @@ date: 2019-10-30 00:22:51
 
 以后只能在看到这篇文章的时候才能回忆起那分崩离析的情绪了。
 
-![mark](http://markdown.yeek.top/bolg/20191030/dSBeCgC2f7lV.jpg?imageslim)
+![mark](https://markdown.yeek.top/bolg/20191030/dSBeCgC2f7lV.jpg?imageslim)
 
 摄于写碎碎念时，台风登陆前夕
 
