--- a/source/_posts/改造微信小程序的地狱回调.md
+++ b/source/_posts/改造微信小程序的地狱回调.md
@@ -1,9 +1,11 @@
 ---
-title: 用async/await解决地狱回调
+title: 改造微信小程序的地狱回调
 categories:
-  - mix
+  - js
 tags:
   - 编程
+  - 微信小程序
+abbrlink: 22871
 date: 2020-04-04 16:47:28
 ---
 
@@ -70,85 +72,13 @@ date: 2020-04-04 16:47:28
 
 
 
-即使加上注释，可读性也很低
-
-```javascript
-  setUserInfo(event) {
-    // 获取设置
-    wx.getSetting({
-      success: (res) => {
-        // 如果有获取用户信息的权限
-        if (!!res.authSetting["scope.userInfo"]) {
-          // 获取用户信息
-          wx.getUserInfo({
-            lang: 'zh_CN',
-            success: (res) => {
-              const userInfo = res.userInfo
-              // 用云函数获取用户的 openid
-              wx.cloud.callFunction({
-                name: 'getOpenId'
-              }).then(res => {
-                // 查询数据库中是否已经用该用户的信息
-                userInfos.where({ _openid: res.result.openId }).count().then(res => {
-                  if (res.total === 0) {
-                    // 没信息就添加
-                    userInfos.add({ data: event.detail.userInfo }).then(() => {     
-                      // 刷新页面
-                      wx.reLaunch({
-                        url: '/pages/my/my',
-                      })
-                    })
-                  } else {
-                    // 有信息就直接刷新页面
-                    wx.reLaunch({
-                      url: '/pages/my/my',
-                    })
-                  }
-                })
-              })
-            },
-          })
-        } else {
-          // 点了拒绝就提示一下
-          Toast.fail('请允许')
-        }
-      },
-    })
-  },
-```
-
-
-
-但是如果使用 `async/await` 就会变成这样
-
-```javascript
-  async setUserInfo(event) {
-    const setting = await this.getSetting()
-    // 是否授权了用户信息
-    if (!!setting["scope.userInfo"]) {
-      const userInfo = await this.getUserInfo()
-      const url = '/pages/my/my'
-      // 是否注册过
-      if (!await this.isRegistered(_openid)) {
-        // 没注册就插入一条
-        await userInfos.add({ data: event.detail.userInfo })
-      }
-      wx.reLaunch({ url })
-    } else {
-      Toast.fail('请允许')
-    }
-  },
-```
-
-当然我顺势进一步的简化了某些逻辑，也忽略了分离的异步方法
-
 
 
 ## 分离嵌套
 
-### 回调函数
+### 改造回调函数
 
-先从最外层的  `wx.getSetting` 的回调函数开始改起
+最外层的  `wx.getSetting` 的回调函数开始改起
 
 ```javascript
 setUserInfo(event) {
@@ -164,7 +94,86 @@ setUserInfo(event) {
   }
 ```
 
-分离后
+#### 分离
+
+首先 `wx.getSetting` 这个方法分离出去
+
+```javascript
+setUserInfo(event) {
+    // res 是 wx.getSetting 方法的 success 回调方法中的 res 对象
+    if (!!res.authSetting["scope.userInfo"]) {
+        //授权了信息
+    } else {
+        //没授权信息
+    }
+}
+
+getSetting() { 
+    wx.getSetting({
+      success: (res) => {
+     
+      }   
+  })
+},
+```
+
+#### 使用 Promise 对象
+
+接着要怎么获得 `success` 回调方法中 `res` 对象呢？
+
+这个时候就要使用 `Promise` 对象了，匿名函数中的`resolve` 和 `reject` 会帮我们分别传出 `成功` 和 `失败` 的值。
+
+```javascript
+setUserInfo(event) {
+    // res 是 wx.getSetting 方法的 success 回调方法中的形参
+    if (!!res.authSetting["scope.userInfo"]) {
+        //授权了信息
+    } else {
+        //没授权信息
+    }
+}
+
+getSetting() {
+  return new Promise((resolve, reject) => {
+    wx.getSetting({
+      success: (res) => {
+        resolve(res)
+      }
+    })
+  })
+},
+```
+
+#### async/await 异步/等待
+
+此时在 `setUserInfo`  里直接调用 `this.getSetting()` 的结果是 `undefined`！
+
+这是因为 `wx.getSetting` 是一个异步的 `耗时操作` ，调用 `success` 方法
+
+```javascript
+setUserInfo(event) {
+    // res 是 wx.getSetting 方法的 success 回调方法中的形参
+    if (!!res.authSetting["scope.userInfo"]) {
+        //授权了信息
+    } else {
+        //没授权信息
+    }
+}
+
+getSetting() {
+  return new Promise((resolve, reject) => {
+    wx.getSetting({
+      success: (res) => {
+        resolve(res)
+      }
+    })
+  })
+},
+```
+
+
+
+
 
 ```javascript
 async setUserInfo(event) {
@@ -192,7 +201,7 @@ getSetting() {
 
 
 
-### Promise对象
+### 分离 Promise 对象
 
 ```javascript
   async setUserInfo(event) {
@@ -248,9 +257,9 @@ getSetting() {
       const userInfo = await this.getUserInfo()
       const url = '/pages/my/my'
       // 是否注册过
-      if (!await this.isRegistered(_openid)) {
+      if (!await this.isRegistered()) {
         // 没注册就插入一条
-        await userInfos.add({ data: event.detail.userInfo })
+        await userInfos.add({ data: userInfo })
       }
       wx.reLaunch({ url })
     } else {
