--- a/source/_posts/从头到尾教你解决小程序回调地狱.md
+++ b/source/_posts/从头到尾教你解决小程序回调地狱.md
@@ -1,5 +1,5 @@
 ---
-title: 手把手教你解决小程序地狱回调
+title: 从头到尾教你解决小程序回调地狱
 categories:
   - js
 tags:
@@ -10,6 +10,12 @@ date: 2020-04-30 17:26:10
 ---
 
 
+
+
+
+示例代码逻辑上有点小 bug ，但不影响主要内容。稍后更新改造，并提供示例项目。
+
+<hr>
 
 由于历史原因，微信小程序的 `异步API` 大部分使用的都是 `回调函数` 或者 `then()` 的方法；虽然很直观，但是一旦逻辑复杂起来就会变成「屎山」。什么叫屎山？下面这个就叫屎山。
 
@@ -101,7 +107,7 @@ date: 2020-04-30 17:26:10
           wx.getUserInfo({
             lang: 'zh_CN',
             success: (res) => {
-              const userInfo = event.detail.userInfo
+              const userInfo = res.userInfo
               wx.cloud.callFunction({
                 name: 'getOpenId'
               }).then(res => {
@@ -379,3 +385,6 @@ console.log(res);
 
 {% endnote %}
 
+
+
+最后，展示一下
